refactor: update transfer controller, service and utils